<resources>
    <string name="app_name">绿畅行</string>
    <!-- <string name="app_name">GreenFuel</string> -->
    <string name="app_id">58a1aa3e</string>
    <string name="near">附近</string>
    <string name="collect">收藏地点</string>
    <string name="route">路线</string>
    <string name="mine">我的</string>
    <string name="hintKeyWordSearch">请输入关键字</string>
    <string name="search">搜索</string>
    <string name="route_situation">路况</string>
    <string name="delicious">美食</string>
    <string name="hotel">酒店</string>
    <string name="famousPlace">景点</string>
    <string name="movie">电影</string>
    <string name="bank">银行</string>
    <string name="gasStation">加油站</string>
    <string name="park">停车场</string>
    <string name="subway">地铁</string>
    <string name="weizhang">违章</string>
    <string name="navigate">导航</string>
    <string name="slogan">节能减排，从我做起</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="unknown_error">网络异常</string>
    <string name="go_here">去这儿</string>
    <string name="is_searching">正在搜索</string>
    <string name="no_result_curr_city">当前城市无结果</string>
    <string name="login_register">登录/注册</string>
    <string name="mine_info">个人信息</string>
    <string name="from_camera">拍照上传</string>
    <string name="from_library">相册上传</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone">账号/手机号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="service_items">服务条款</string>
    <string name="input_password">输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="check_code">验证码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="person_info">个人资料</string>
    <string name="user_name">用户昵称</string>
    <string name="car_brand">车辆品牌</string>
    <string name="car_type">车辆型号</string>
    <string name="emission_standard">排放标准</string>
    <string name="today_driver_distance">总行程(KM)</string>
    <string name="today_fuel_consumption">累计油耗(L)</string>
    <string name="save_fuel">节约油耗(ml)</string>
    <string name="today_emission">碳排放(kg)</string>
    <string name="emission_order">排放榜单</string>
    <string name="history_data">历史数据</string>
    <string name="save_point">我的收藏</string>
    <string name="myRoute">我的行程</string>
    <string name="mine_setting">设置</string>
    <string name="exit">退出</string>
    <string name="forget_password1">忘记密码</string>
    <string name="confirm">确认</string>
    <string name="history_fuel_consumption">历史油耗</string>
    <string name="history_emission">历史排放</string>
    <string name="more_histories">更多历史纪录</string>
    <string name="clear_histories">清空历史纪录</string>
    <string name="load_failed">数据加载失败</string>
    <string name="wei_zhang_search">违章查询</string>
    <string name="input_car_number">输入车牌号</string>
    <string name="input_car_id">车牌识别号</string>
    <string name="input_engine_id">发动机号</string>
    <string name="search_now">立即查询</string>
    <string name="search_result">查询结果</string>
    <string name="fine">罚款：</string>
    <string name="diminish_score">扣分：</string>
    <string name="setting">设置</string>
    <string name="system_notification">系统通知</string>
    <string name="app_update">应用升级</string>
    <string name="about_app">关于</string>
    <string name="exit_login">退出登录</string>
    <string name="my_order">我的排名:</string>
    <string name="emission_consumption">排放量:</string>
    <string name="unknown_order">- -</string>
    <string name="select_month">选择月份：</string>
    <string name="select_year">选择年份：</string>


    <string-array name="province">
        <item>京</item>
        <item>津</item>
        <item>沪</item>
        <item>渝</item>
        <item>冀</item>
        <item>晋</item>
        <item>辽</item>
        <item>吉</item>
        <item>黑</item>
        <item>苏</item>
        <item>浙</item>
        <item>皖</item>
        <item>闽</item>
        <item>赣</item>
        <item>鲁</item>
        <item>豫</item>
        <item>鄂</item>
        <item>湘</item>
        <item>粤</item>
        <item>琼</item>
        <item>川</item>
        <item>贵</item>
        <item>云</item>
        <item>陕</item>
        <item>甘</item>
        <item>青</item>
        <item>桂</item>
        <item>蒙</item>
        <item>藏</item>
        <item>宁</item>
        <item>新</item>
    </string-array>

    <string-array name="year">
        <item>2017年</item>
        <item>2016年</item>
        <item>2015年</item>
        <item>2014年</item>
        <item>2013年</item>
        <item>2012年</item>
        <item>2011年</item>
        <item>2010年</item>
    </string-array>

    <string-array name="month">
        <item>一月</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>十一月</item>
        <item>十二月</item>
    </string-array>
    <string name="title_activity_charts">Charts</string>
    <string name="helpurl"><![CDATA[<string name=\"helpurl\">http://blog.csdn.net/xcl168/article/details/29675613</string>]]></string>
</resources>
