<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/whitesmoke">
        <Button
            android:onClick="back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/bn_bg_back"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/near"
            android:gravity="center"
            android:textSize="@dimen/lTextSize"
            android:textColor="@color/colorDark"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkGrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >
        <android.support.v4.view.ViewPager
            android:id="@+id/nearViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
            <LinearLayout
                android:id="@+id/linerLayoutDot"
                android:layout_alignBottom="@+id/nearViewPager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/transparent"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorGray3"
            >
            <TableRow
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_width="match_parent">
                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:drawablePadding="-10dp"
                    android:clickable="true"
                    android:onClick="doSearch"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/delicious"
                    android:drawableTop="@mipmap/delicious"
                    android:gravity="center"
                    android:textSize="@dimen/mTextSize"
                    />
                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:drawablePadding="-10dp"
                    android:clickable="true"
                    android:onClick="doSearch"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/hotel"
                    android:drawableTop="@mipmap/hotel"
                    android:gravity="center"
                    />
                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:drawablePadding="-10dp"
                    android:clickable="true"
                    android:onClick="doSearch"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/famousPlace"
                    android:drawableTop="@mipmap/famous_place"
                    android:gravity="center"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_width="match_parent">
                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:drawablePadding="-10dp"
                    android:clickable="true"
                    android:onClick="doSearch"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/movie"
                    android:drawableTop="@mipmap/movie"
                    android:gravity="center"
                    />
                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:drawablePadding="-10dp"
                    android:clickable="true"
                    android:onClick="doSearch"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/bank"
                    android:drawableTop="@mipmap/bank"
                    android:gravity="center"
                    />
                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:drawablePadding="-10dp"
                    android:clickable="true"
                    android:onClick="doSearch"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/gasStation"
                    android:drawableTop="@mipmap/gas_station"
                    android:gravity="center"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_width="match_parent">
                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:drawablePadding="-10dp"
                    android:clickable="true"
                    android:onClick="doSearch"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/park"
                    android:drawableTop="@mipmap/park"
                    android:gravity="center"
                    />
                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:drawablePadding="-10dp"
                    android:clickable="true"
                    android:onClick="doSearch"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/subway"
                    android:drawableTop="@mipmap/subway"
                    android:gravity="center"
                    />
                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:drawablePadding="-10dp"
                    android:clickable="true"
                    android:onClick="searchWeiZhang"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/weizhang"
                    android:drawableTop="@mipmap/weizhang"
                    android:gravity="center"
                    />
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:drawableLeft="@mipmap/conservation"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>