<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/colorIconBlue">
        <Button
            android:layout_marginTop="10dp"
            android:onClick="back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_bg_back_white_blue"
            android:id="@+id/button" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting"
            android:gravity="center"
            android:textSize="@dimen/lTextSize"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:background="@drawable/rect_bg_white_gray_press"
        >
        <TextView
            android:text="@string/system_notification"
            android:textSize="@dimen/lTextSize"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            />

        <CheckBox
            android:checked="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/switch_on_off"
            android:button="@null"
            android:layout_gravity="center_vertical|right"
            />
    </LinearLayout>

    <LinearLayout
        android:onClick="updateApp"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:background="@drawable/rect_bg_white_gray_press"
        >
        <TextView
            android:text="@string/app_update"
            android:textSize="@dimen/lTextSize"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_right_press"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkGrey"/>
    <LinearLayout
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:background="@drawable/rect_bg_white_gray_press"
        >

        <TextView
            android:text="@string/about_app"
            android:textSize="@dimen/lTextSize"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/textView3" />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_right_press"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <Button
        android:id="@+id/exit_login"
        android:onClick="exitLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_login"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/corner_rec_bg_blue_press"
        android:textColor="@color/white"/>

</LinearLayout>