<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/colorIconBlue">
        <Button
            android:layout_marginTop="10dp"
            android:onClick="back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_bg_back_white_blue"
            android:id="@+id/button" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/history_data"
            android:gravity="center"
            android:textSize="@dimen/lTextSize"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
    </RelativeLayout>
    <LinearLayout
        android:clickable="true"
        android:onClick="goHistoryFuelConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="60dp"
        android:background="@drawable/rec_bg_corner_press"
        android:paddingRight="60dp"
        android:gravity="center">
        <ImageView
            android:src="@drawable/vector_drawable_power"
            android:layout_width="120dp"
            android:layout_height="120dp" />
        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/lTextSize"
            android:layout_marginTop="10dp"
            android:text="@string/history_fuel_consumption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:clickable="true"
        android:onClick="goHistoryEmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="60dp"
        android:background="@drawable/rec_bg_corner_press"
        android:paddingRight="60dp"
        android:gravity="center">
        <ImageView
            android:src="@drawable/vector_drawable_emision"
            android:layout_width="120dp"
            android:layout_height="120dp" />
        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/lTextSize"
            android:layout_marginTop="10dp"
            android:text="@string/history_emission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>